// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/Badge will have a disabled attribute correctly 1`] = `
<span
  class="lk-badge lk-badge--danger-inverse lk-badge--xl text-bold"
  disabled="true"
>
  <div
    class="lk-badge--wrapper"
  >
    <div
      class="lk-badge--icon"
    >
      <font-awesome-icon-stub />
    </div>
    <div
      class="lk-badge--label has-icon"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a dot correctly 1`] = `
<span
  class="lk-badge lk-badge--danger-inverse lk-badge--xl text-bold pill dot"
  disabled="true"
>
  <!--v-if-->
</span>
`;

exports[`common/Badge will have a icon correctly 1`] = `
<span
  class="lk-badge lk-badge--danger-inverse lk-badge--xl text-bold"
>
  <div
    class="lk-badge--wrapper"
  >
    <div
      class="lk-badge--icon"
    >
      <font-awesome-icon-stub />
    </div>
    <div
      class="lk-badge--label has-icon"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a inverse variant color correctly 1`] = `
<span
  class="lk-badge lk-badge--primary-inverse lk-badge--xs text-bold"
>
  <div
    class="lk-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="lk-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a inverse variant color correctly 2`] = `
<span
  class="lk-badge lk-badge--danger-inverse lk-badge--xs text-bold"
>
  <div
    class="lk-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="lk-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a label correctly 1`] = `
<span
  class="lk-badge lk-badge--light lk-badge--xs text-bold"
>
  <div
    class="lk-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="lk-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a pill correctly 1`] = `
<span
  class="lk-badge lk-badge--danger-inverse lk-badge--xl text-bold pill"
  disabled="true"
>
  <div
    class="lk-badge--wrapper"
  >
    <div
      class="lk-badge--icon"
    >
      <font-awesome-icon-stub />
    </div>
    <div
      class="lk-badge--label has-icon"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a size correctly 1`] = `
<span
  class="lk-badge lk-badge--danger-inverse lk-badge--xs text-bold"
>
  <div
    class="lk-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="lk-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a size correctly 2`] = `
<span
  class="lk-badge lk-badge--danger-inverse lk-badge--sm text-bold"
>
  <div
    class="lk-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="lk-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a size correctly 3`] = `
<span
  class="lk-badge lk-badge--danger-inverse lk-badge--base text-bold"
>
  <div
    class="lk-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="lk-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a size correctly 4`] = `
<span
  class="lk-badge lk-badge--danger-inverse lk-badge--lg text-bold"
>
  <div
    class="lk-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="lk-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a size correctly 5`] = `
<span
  class="lk-badge lk-badge--danger-inverse lk-badge--xl text-bold"
>
  <div
    class="lk-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="lk-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a text bold correctly 1`] = `
<span
  class="lk-badge lk-badge--danger-inverse lk-badge--xl text-bold pill dot"
  disabled="true"
>
  <!--v-if-->
</span>
`;

exports[`common/Badge will have a variant color correctly 1`] = `
<span
  class="lk-badge lk-badge--primary lk-badge--xs text-bold"
>
  <div
    class="lk-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="lk-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a variant color correctly 2`] = `
<span
  class="lk-badge lk-badge--danger lk-badge--xs text-bold"
>
  <div
    class="lk-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="lk-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a variant color correctly 3`] = `
<span
  class="lk-badge lk-badge--warning lk-badge--xs text-bold"
>
  <div
    class="lk-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="lk-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a variant color correctly 4`] = `
<span
  class="lk-badge lk-badge--dark lk-badge--xs text-bold"
>
  <div
    class="lk-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="lk-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a variant color correctly 5`] = `
<span
  class="lk-badge lk-badge--success lk-badge--xs text-bold"
>
  <div
    class="lk-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="lk-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will not a rounded correctly 1`] = `
<span
  class="lk-badge lk-badge--danger-inverse lk-badge--xl text-bold no-rounded"
  disabled="true"
>
  <div
    class="lk-badge--wrapper"
  >
    <div
      class="lk-badge--icon"
    >
      <font-awesome-icon-stub />
    </div>
    <div
      class="lk-badge--label has-icon"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will render and match snapshot 1`] = `
<span
  class="lk-badge lk-badge--light lk-badge--xs text-bold"
>
  <div
    class="lk-badge--wrapper"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
</span>
`;
